ZOOKEEPER-3188: fix JDK-13 warning